Fix header button clipping

--- a/src/frontend/static/style.css
+++ b/src/frontend/static/style.css
@@ -8,7 +8,6 @@ body {
     top: 0;
     left: 0;
     position: absolute;
-    min-width: 400px;
     width: 100%;
     background: #333;
     color: #fff;
